--- a/docker-compose.clark.regtest.yml
+++ b/docker-compose.clark.regtest.yml
@@ -1,7 +1,7 @@
 services:
   clarkd:
-    container_name: clarkd 
-    build: 
+    container_name: clarkd
+    build:
       context: .
       dockerfile: Dockerfile
     restart: unless-stopped
@@ -12,7 +12,9 @@ services:
       - ARK_ROUND_LIFETIME=20
       - ARK_TX_BUILDER_TYPE=covenantless
       - ARK_ESPLORA_URL=http://chopsticks:3000
-      - ARK_NEUTRINO_PEER=bitcoin:18444
+      - ARK_BITCOIND_RPC_USER=admin1
+      - ARK_BITCOIND_RPC_PASS=123
+      - ARK_BITCOIND_RPC_HOST=bitcoin:18443
       - ARK_SCHEDULER_TYPE=block
       - ARK_NO_TLS=true
       - ARK_NO_MACAROONS=true
